--- a/articles.html
+++ b/articles.html
@@ -71,8 +71,7 @@
         }
         
         .loading {
-            text-align: center;
-            padding: 40px;
+            padding: 40px 0;
             color: #666;
         }
         
