--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <p>Senior Fellow, Center for Democracy, Development, and the Rule of Law</p>
             <p>Freeman Spogli Institute</p>
             <p>Professor (by courtesy), Political Science Department</p>
-            <p style="margin-top: 15px;"><a href="mailto:adida@stanford.edu" class="email">adida@stanford.edu</a></p>
+            <p style="margin-top: 15px;"><a href="mailto:cadida@stanford.edu" class="email">cadida@stanford.edu</a></p>
         </div>
         
         <div class="quick-links">
