--- a/teaching.html
+++ b/teaching.html
@@ -123,7 +123,7 @@
         
         <div class="course">
             <strong>Migrant exclusion and inclusion around the world</strong><br>
-            <a href="uploads/1/2/6/5/12650228/Adida, Claire -- Politics of migrant inclusion and exclusion, Spring 2024.pdf" target="_blank">[syllabus]</a>
+            <a href="uploads/1/2/6/5/12650228/adida_claire_--_politics_of_migrant_inclusion_and_exclusion_spring_2024.pdf" target="_blank">[syllabus]</a>
         </div>
         
         <div class="course">
