--- a/teaching.html
+++ b/teaching.html
@@ -114,7 +114,7 @@
         
         <div class="info-box">
             <p><strong>My office:</strong> Encina Hall C146</p>
-            <p><strong>My office hours:</strong> Sign up on <a href="https://calendly.com/cadida/dgs-office-hours-in-person-on-tuesdays-virtual-on-fridays" target="_blank">my Calendly</a></p>
+            <p><strong>My office hours:</strong> Sign up on <a href="https://calendar.app.google/2JCKxpPTVgoKzqr27" target="_blank">my booking page</a></p>
         </div>
         
         <p>I have taught graduate and undergraduate courses at UC San Diego and Stanford University.</p>
