--- a/books.html
+++ b/books.html
@@ -142,13 +142,13 @@
         <div class="book">
             <div class="book-content">
                 <div class="book-cover">
-                    <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674504929" target="_blank">
+                    <a href="https://www.hup.harvard.edu/books/9780674979697" target="_blank">
                         <img src="uploads/1/2/6/5/12650228/published/hup-adida-muslim.jpg" alt="Why Muslim Integration Fails in Christian-Heritage Societies">
                     </a>
                 </div>
                 <div class="book-info">
                     <div class="book-title">
-                        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674504929" target="_blank">
+                        <a href="https://www.hup.harvard.edu/books/9780674979697" target="_blank">
                             Why Muslim Integration Fails in Christian-Heritage Societies
                         </a>
                     </div>
