--- a/books.html
+++ b/books.html
@@ -203,7 +203,7 @@
                     <div>Cambridge University Press, 2014</div>
                     
                     <div class="book-details">
-                        <p><strong>Reviewed by:</strong> Crossings: Journal of Migration and Culture; 
+                        <p><strong>Reviewed by:</strong> <a href="https://intellectdiscover.com/content/journals/10.1386/cjmc.5.2-3.339_5" target="_blank">Crossings: Journal of Migration and Culture</a>; 
                         <a href="https://www.cambridge.org/core/journals/journal-of-modern-african-studies/article/abs/immigrant-exclusion-and-insecurity-in-africa-coethnic-strangers-by-claire-l-adida-new-york-cambridge-university-press-2014-pp-175-55-hbk/679F3C3A2C4743528049CDB5E3D0AFF2" target="_blank">Journal of Modern African Studies</a>; 
                         <a href="https://www.jstor.org/stable/44715393" target="_blank">International Journal of African Historical Studies</a>; 
                         <a href="http://www.psqonline.org/article.cfm?IDArticle=19525" target="_blank">Political Science Quarterly</a>.</p>
