Update sidebar links in articles.html

--- a/articles.html
+++ b/articles.html
@@ -165,8 +165,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cv.pdf">CV</a>
-                <a href="articles.html">Articles</a>
-                <a href="books.html">Books</a>
+                <a href="publications.html">Publications</a>
                 <a href="teaching.html">Teaching</a>
                 <a href="https://scholar.google.com/citations?user=Yf5lW8oAAAAJ&hl=en&authuser=1" target="_blank">Google Scholar</a>
             </nav>
