--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
             
             <div class="bio">
-                <p>I study how countries manage new and existing forms of diversity. I have applied this question to the study of immigrant exclusion and ethnic politics in urban West Africa, in France, and in the United States. My current research investigates the conditions that reduce out-group discrimination, and the strategies vulnerable minorities employ to navigate discriminatory environments. My work has been funded by the National Science Foundation, the Bill & Melinda Gates Foundation, the Hellman Foundation, and the Evidence in Governance and Politics Group.</p>
+                <p>What holds diverse societies together—and what threatens to unravel them? I study social cohesion in an era of rising polarization and mass migration. Current projects investigate how communities navigate displacement, integration, and belonging — from women's political empowerment in Nigeria to climate-driven migration in Guatemala to the challenges migrant returnees face reintegrating in Central America.  My work has been supported by the National Science Foundation, the Bill & Melinda Gates Foundation, and the Evidence in Governance and Politics group.</p>
             </div>
             
             <div class="gallery">
