--- a/teaching.html
+++ b/teaching.html
@@ -178,8 +178,9 @@
             <h2>Graduate Courses</h2>
             
             <div class="course">
-                <strong>Migrant exclusion and inclusion around the world</strong>, Spring 2024 & Winter 2026<br>
-                <a href="uploads/1/2/6/5/12650228/adida_claire_--_politics_of_migrant_inclusion_and_exclusion_spring_2024.pdf" target="_blank">[syllabus]</a>
+                <strong>Migrant exclusion and inclusion around the world</strong> (PhD and Masters level), Spring 2024 & Winter 2026<br>
+                <a href="uploads/1/2/6/5/12650228/adida_claire_--_politics_of_migrant_inclusion_and_exclusion_spring_2024.pdf" target="_blank">[PhD syllabus]</a>
+                <a href="uploads/1/2/6/5/12650228/adida_claire_--_politics_of_migrant_inclusion_and_exclusion_winter_2026.pdf" target="_blank">[Masters syllabus]</a>
             </div>
             
             <div class="course">
